z-index player fixed

--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ footer {
   background-color: #282828;
   display: flex;
   align-items: center;
+  z-index: 9999;
 }
 
 .player-left {
